tests/NormalTests/paczka1/fuzzy1/10899033.err
Error in line 4: 5f8YeFR A238 32,09
Error in line 6: kR3qz A238 81,4
Error in line 1: S375 A238 89,3
Error in line 18: QOq3q A185 54,9
Error in line 27: AAawU A185 46,1
Error in line 17: kR3qz A238 24,0
Error in line 29: kR3qz A185 15,1
Error in line 28: AAawU S375 64,8
Error in line 13: 5f8YeFR A238 9,9
